rename wl -> lj

--- a/examples/nested/index.html
+++ b/examples/nested/index.html
@@ -100,9 +100,9 @@
 </head>
 
 <body>
-  <div id="stage_root" data-wl-type="stage">
-    <div data-wl-type="layer" data-wl-native-scroll="true" data-wl-default-frame="content1">
-      <div data-wl-type="frame" data-wl-name="content1" data-wl-fit-to="width" data-wl-neighbors.b="content2" class="frame">
+  <div id="stage_root" data-lj-type="stage">
+    <div data-lj-type="layer" data-lj-native-scroll="true" data-lj-default-frame="content1">
+      <div data-lj-type="frame" data-lj-name="content1" data-lj-fit-to="width" data-lj-neighbors.b="content2" class="frame">
         <section>
           <h1> Lorem </h1>
           <p class="text">
@@ -123,24 +123,24 @@
               </div>
             </td>
             <td>
-              <div id="stage_images" data-wl-type="stage">
-                <div id="layer_image" data-wl-type="layer" data-wl-native-scroll="false" data-wl-default-frame="image2">
-                  <div data-wl-type="frame" data-wl-name="image1" data-wl-fit-to="cover" data-wl-no-scrolling="true" data-wl-start-position="center" data-wl-neighbors.l="image6" data-wl-neighbors.r="image2">
+              <div id="stage_images" data-lj-type="stage">
+                <div id="layer_image" data-lj-type="layer" data-lj-native-scroll="false" data-lj-default-frame="image2">
+                  <div data-lj-type="frame" data-lj-name="image1" data-lj-fit-to="cover" data-lj-no-scrolling="true" data-lj-start-position="center" data-lj-neighbors.l="image6" data-lj-neighbors.r="image2">
                     <image src="img/1.jpg" />
                   </div>
-                  <div data-wl-type="frame" data-wl-name="image2" data-wl-fit-to="cover" data-wl-no-scrolling="true" data-wl-start-position="center" data-wl-neighbors.l="image1" data-wl-neighbors.r="image3">
+                  <div data-lj-type="frame" data-lj-name="image2" data-lj-fit-to="cover" data-lj-no-scrolling="true" data-lj-start-position="center" data-lj-neighbors.l="image1" data-lj-neighbors.r="image3">
                     <image src="img/2.jpg" />
                   </div>
-                  <div data-wl-type="frame" data-wl-name="image3" data-wl-fit-to="cover" data-wl-no-scrolling="true" data-wl-start-position="center" data-wl-neighbors.l="image2" data-wl-neighbors.r="image4">
+                  <div data-lj-type="frame" data-lj-name="image3" data-lj-fit-to="cover" data-lj-no-scrolling="true" data-lj-start-position="center" data-lj-neighbors.l="image2" data-lj-neighbors.r="image4">
                     <image src="img/3.jpg" />
                   </div>
-                  <div data-wl-type="frame" data-wl-name="image4" data-wl-fit-to="cover" data-wl-no-scrolling="true" data-wl-start-position="center" data-wl-neighbors.l="image3" data-wl-neighbors.r="image5">
+                  <div data-lj-type="frame" data-lj-name="image4" data-lj-fit-to="cover" data-lj-no-scrolling="true" data-lj-start-position="center" data-lj-neighbors.l="image3" data-lj-neighbors.r="image5">
                     <image src="img/4.jpg" />
                   </div>
-                  <div data-wl-type="frame" data-wl-name="image5" data-wl-fit-to="cover" data-wl-no-scrolling="true" data-wl-start-position="center" data-wl-neighbors.l="image4" data-wl-neighbors.r="image6">
+                  <div data-lj-type="frame" data-lj-name="image5" data-lj-fit-to="cover" data-lj-no-scrolling="true" data-lj-start-position="center" data-lj-neighbors.l="image4" data-lj-neighbors.r="image6">
                     <image src="img/5.jpg" />
                   </div>
-                  <div data-wl-type="frame" data-wl-name="image6" data-wl-fit-to="cover" data-wl-no-scrolling="true" data-wl-start-position="center" data-wl-neighbors.l="image5" data-wl-neighbors.r="image1">
+                  <div data-lj-type="frame" data-lj-name="image6" data-lj-fit-to="cover" data-lj-no-scrolling="true" data-lj-start-position="center" data-lj-neighbors.l="image5" data-lj-neighbors.r="image1">
                     <image src="img/6.jpg" />
                   </div>
                 </div>
@@ -169,7 +169,7 @@
           </p>
         </section>
       </div>
-      <div data-wl-type="frame" data-wl-name="content2" data-wl-fit-to="width" data-wl-neighbors.t="content1" class="frame">
+      <div data-lj-type="frame" data-lj-name="content2" data-lj-fit-to="width" data-lj-neighbors.t="content1" class="frame">
         <section>
           <h1>Toffee ipsum</h1>
           <p>
@@ -190,11 +190,11 @@
         </section>
       </div>
     </div>
-    <div id="layer_menu" data-wl-type="layer" data-wl-native-scroll="false" data-wl-default-frame="menu1" data-wl-layout-type="canvas">
-      <div id="menu1" data-wl-x="0" data-wl-y="0" data-wl-type="frame" data-wl-name="menu1" data-wl-fit-to="width" data-wl-neighbors.t="menu2">
+    <div id="layer_menu" data-lj-type="layer" data-lj-native-scroll="false" data-lj-default-frame="menu1" data-lj-layout-type="canvas">
+      <div id="menu1" data-lj-x="0" data-lj-y="0" data-lj-type="frame" data-lj-name="menu1" data-lj-fit-to="width" data-lj-neighbors.t="menu2">
         <div class="menubox"><i class="fa fa-bars" aria-hidden="true"></i> Menu</div>
       </div>
-      <div id="menu2" data-wl-x="0" data-wl-y="-400" data-wl-type="frame" data-wl-name="menu2" data-wl-fit-to="width" data-wl-neighbors.b="menu1">
+      <div id="menu2" data-lj-x="0" data-lj-y="-400" data-lj-type="frame" data-lj-name="menu2" data-lj-fit-to="width" data-lj-neighbors.b="menu1">
         <section class="menu">
           <div>Home</div>
           <div>About</div>
@@ -208,9 +208,9 @@
 
   <script src="layerjs.js"></script>
   <script>
-    WL.init();
+    layerJS.init();
     // API calls for slider left/right buttons
-    var ilayer = WL.select('#layer_image');
+    var ilayer = layerJS.select('#layer_image');
     document.getElementById('next').addEventListener('click', function() {
       ilayer.transitionTo(ilayer.currentFrame.data.attributes.neighbors.r, {
         type: 'left'
@@ -222,7 +222,7 @@
       });
     });
     // API calls for menu open closely
-    var mlayer = WL.select('#layer_menu');
+    var mlayer = layerJS.select('#layer_menu');
     document.getElementsByClassName('menubox')[0].addEventListener('click', function() {
       if (mlayer.currentFrame.data.attributes.name == 'menu1') {
         mlayer.transitionTo('menu2', {
