--- a/examples/simpleexample.html
+++ b/examples/simpleexample.html
@@ -11,12 +11,12 @@
 </head>
 
 <body>
-  <div id="root" data-wl-type="stage">
-    <div id="layer1" data-wl-type="layer" data-wl-defaultFrame="main">
-      <div data-wl-type="frame" data-wl-name="main" data-wl-fitTo="width" data-wl-startPostion="top" style="width:1440px"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+  <div id="root" data-lj-type="stage">
+    <div id="layer1" data-lj-type="layer" data-lj-defaultFrame="main">
+      <div data-lj-type="frame" data-lj-name="main" data-lj-fitTo="width" data-lj-startPostion="top" style="width:1440px"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
         takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
         et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </div>
-      <div data-wl-type="frame" data-wl-name="second" data-wl-fitTo="width" data-wl-startPostion="top" style="width:1440px"> But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder
+      <div data-lj-type="frame" data-lj-name="second" data-lj-fitTo="width" data-lj-startPostion="top" style="width:1440px"> But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder
         of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who
         loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious
         physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure? </div>
@@ -25,13 +25,13 @@
   <button id="next"> next </button>
   <script src="../dist/layerjs.js"></script>
   <script>
-    WL.init();
+    layerJS.init();
     var frames = ['main', 'second'];
     var findex = 0;
     document.getElementById('next').addEventListener('click', function() {
       findex++;
       findex %= frames.length;
-      WL.select('#layer1').transitionTo(frames[findex], {
+      layerJS.select('#layer1').transitionTo(frames[findex], {
         type: 'left'
       });
     })
