--- a/examples/vermont_diaries/index.html
+++ b/examples/vermont_diaries/index.html
@@ -22,60 +22,60 @@
       width: 100%;
     }
 
-    [data-wl-type="frame"]:hover {
+    [data-lj-type="frame"]:hover {
       background-color: rgba(0, 0, 0, 0.2);
       box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
       border-radius: 3px;
       cursor: pointer;
     }
 
-    [data-wl-type="frame"].wl-active {
+    [data-lj-type="frame"].wl-active {
       background-color: none;
       pointer-events: none;
       cursor: inherit;
     }
 
-    [data-wl-name="1"] {
+    [data-lj-name="1"] {
       width: 800px;
       height: 360px;
     }
 
-    [data-wl-name="2"] {
+    [data-lj-name="2"] {
       width: 720px;
       height: 250px;
     }
 
-    [data-wl-name="3"] {
+    [data-lj-name="3"] {
       width: 250px;
       height: 250px;
     }
 
-    [data-wl-name="4"] {
+    [data-lj-name="4"] {
       width: 500px;
       height: 270px;
     }
 
-    [data-wl-name="5"] {
+    [data-lj-name="5"] {
       width: 800px;
       height: 300px;
     }
 
-    [data-wl-name="6"] {
+    [data-lj-name="6"] {
       width: 720px;
       height: 550px;
     }
 
-    [data-wl-name="7"] {
+    [data-lj-name="7"] {
       width: 500px;
       height: 280px;
     }
 
-    [data-wl-name="8"] {
+    [data-lj-name="8"] {
       width: 270px;
       height: 340px;
     }
 
-    [data-wl-name="overview"] {
+    [data-lj-name="overview"] {
       width: 800px;
       height: 1892px;
       pointer-events: none;
@@ -99,26 +99,26 @@
   <![endif]-->
 </head>
 
-<body data-wl-type="stage">
-  <div data-wl-type="layer" data-wl-layout-type="canvas">
-    <div data-wl-type="frame" data-wl-fit-to="contain" data-wl-start-position="center" data-wl-name="overview" data-wl-x="0" data-wl-y="0">
+<body data-lj-type="stage">
+  <div data-lj-type="layer" data-lj-layout-type="canvas">
+    <div data-lj-type="frame" data-lj-fit-to="contain" data-lj-start-position="center" data-lj-name="overview" data-lj-x="0" data-lj-y="0">
       <img width="800" height="1892" src="vermont_diaries.gif">
     </div>
-    <div data-wl-type="frame" data-wl-fit-to="width" data-wl-name="1" data-wl-neighbors.b="2"></div>
-    <div data-wl-type="frame" data-wl-fit-to="contain" data-wl-start-position="center" data-wl-name="2" data-wl-x="40" data-wl-y="350" data-wl-neighbors.t="1" data-wl-neighbors.b="3"></div>
-    <div data-wl-type="frame" data-wl-fit-to="contain" data-wl-start-position="center" data-wl-name="3" data-wl-x="40" data-wl-y="590" data-wl-neighbors.t="2" data-wl-neighbors.r="4" data-wl-neighbors.b="5"></div>
-    <div data-wl-type="frame" data-wl-fit-to="contain" data-wl-start-position="center" data-wl-name="4" data-wl-x="250" data-wl-y="590" data-wl-neighbors.l="3" data-wl-neighbors.t="2" data-wl-neighbors.b="5"></div>
-    <div data-wl-type="frame" data-wl-fit-to="contain" data-wl-start-position="center" data-wl-name="5" data-wl-x="0" data-wl-y="810" data-wl-neighbors.t="4" data-wl-neighbors.b="6"></div>
-    <div data-wl-type="frame" data-wl-fit-to="contain" data-wl-start-position="center" data-wl-name="6" data-wl-x="40" data-wl-y="1060" data-wl-neighbors.t="5" data-wl-neighbors.b="7"></div>
-    <div data-wl-type="frame" data-wl-fit-to="contain" data-wl-start-position="center" data-wl-name="7" data-wl-x="40" data-wl-y="1570" data-wl-neighbors.t="6" data-wl-neighbors.r="8"></div>
-    <div data-wl-type="frame" data-wl-fit-to="contain" data-wl-start-position="center" data-wl-name="8" data-wl-x="520" data-wl-y="1560" data-wl-neighbors.l="7" data-wl-neighbors.t="6" data-wl-neighbors.b="overview" data-wl-neighbors.r="overview"></div>
+    <div data-lj-type="frame" data-lj-fit-to="width" data-lj-name="1" data-lj-neighbors.b="2"></div>
+    <div data-lj-type="frame" data-lj-fit-to="contain" data-lj-start-position="center" data-lj-name="2" data-lj-x="40" data-lj-y="350" data-lj-neighbors.t="1" data-lj-neighbors.b="3"></div>
+    <div data-lj-type="frame" data-lj-fit-to="contain" data-lj-start-position="center" data-lj-name="3" data-lj-x="40" data-lj-y="590" data-lj-neighbors.t="2" data-lj-neighbors.r="4" data-lj-neighbors.b="5"></div>
+    <div data-lj-type="frame" data-lj-fit-to="contain" data-lj-start-position="center" data-lj-name="4" data-lj-x="250" data-lj-y="590" data-lj-neighbors.l="3" data-lj-neighbors.t="2" data-lj-neighbors.b="5"></div>
+    <div data-lj-type="frame" data-lj-fit-to="contain" data-lj-start-position="center" data-lj-name="5" data-lj-x="0" data-lj-y="810" data-lj-neighbors.t="4" data-lj-neighbors.b="6"></div>
+    <div data-lj-type="frame" data-lj-fit-to="contain" data-lj-start-position="center" data-lj-name="6" data-lj-x="40" data-lj-y="1060" data-lj-neighbors.t="5" data-lj-neighbors.b="7"></div>
+    <div data-lj-type="frame" data-lj-fit-to="contain" data-lj-start-position="center" data-lj-name="7" data-lj-x="40" data-lj-y="1570" data-lj-neighbors.t="6" data-lj-neighbors.r="8"></div>
+    <div data-lj-type="frame" data-lj-fit-to="contain" data-lj-start-position="center" data-lj-name="8" data-lj-x="520" data-lj-y="1560" data-lj-neighbors.l="7" data-lj-neighbors.t="6" data-lj-neighbors.b="overview" data-lj-neighbors.r="overview"></div>
     <a id="source" href="http://www.snotm.com/">Comic by Alex Noriega</a>
 
   </div>
   <script>
-    WL.init();
-    $('[data-wl-type="frame"]').on('click', function(e) {
-      WL.select('[data-wl-type="layer"]').transitionTo(e.currentTarget._wlView.data.attributes.name);
+    layerJS.init();
+    $('[data-lj-type="frame"]').on('click', function(e) {
+      layerJS.select('[data-lj-type="layer"]').transitionTo(e.currentTarget._wlView.data.attributes.name);
     });
   </script>
 </body>
