--- a/test/e2e/startpositions/nativescrolling_true/fitto_width/startposition_center.html
+++ b/test/e2e/startpositions/nativescrolling_true/fitto_width/startposition_center.html
@@ -15,16 +15,16 @@
 </style>
 
 <body>
-  <div id="stage" data-wl-type="stage" style="height:500px; width:600px">
-    <div id="layer" data-wl-type="layer" data-wl-default-frame="frame" data-wl-native-scroll="true">
-      <div id="frame" data-wl-type="frame" data-wl-start-position="center" data-wl-name="frame" data-wl-fit-to="width" style="height:200px;width:200px"> But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder
+  <div id="stage" data-lj-type="stage" style="height:500px; width:600px">
+    <div id="layer" data-lj-type="layer" data-lj-default-frame="frame" data-lj-native-scroll="true">
+      <div id="frame" data-lj-type="frame" data-lj-start-position="center" data-lj-name="frame" data-lj-fit-to="width" style="height:200px;width:200px"> But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder
         of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who
         loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure.</div>
     </div>
   </div>
   <script src="../../../../../dist/layerjs.js"></script>
   <script>
-    WL.init();
+    layerJS.init();
   </script>
 </body>
 
