update browser spec tests

--- a/test/SpecsInBrowser.html
+++ b/test/SpecsInBrowser.html
@@ -15,11 +15,12 @@
   <!-- include source files here... -->
 
 
-  <!-- include spec files here... -->
-  <script src="js/specs.js"></script>
+
+
 </head>
 
 <body>
+  <div id="testContainer"/>
 </body>
-
+  <script src="js/specs.js"></script>
 </html>
