mutation observer e2e perf test: added also graphical mutations; reduced number of elements to a more realistic number

--- a/test/e2e/mutationobserver/mutationobserver.html
+++ b/test/e2e/mutationobserver/mutationobserver.html
@@ -1,5 +1,13 @@
 <html>
-
+<style>
+#test div {
+  background-color: rgb(255,240,240);
+  border: 1px solid gray;
+}
+.aclass {
+  border-radius: 5px;
+}
+</style>
 <body>
   <div id="test">
     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
