--- a/examples/nested/index.html
+++ b/examples/nested/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Simple Example</title>
   <meta name=viewport content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="layerjs.css">
+  <link rel="stylesheet" type="text/css" href="../../dist/css/layerjs.css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
   <style>
     @import url(https://fonts.googleapis.com/css?family=Oxygen:400);
@@ -116,10 +116,12 @@
           <tr>
             <td style="width: 15%; cursor: pointer;">
               <div id="prev">
+                <a href="#stage_images.layer_image.!prev">
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20 20" enable-background="new 0 0 20 20" xml:space="preserve" width="40">
                   <path fill="#455A64" d="M12.452,4.516c0.446,0.436,0.481,1.043,0,1.576L8.705,10l3.747,3.908c0.481,0.533,0.446,1.141,0,1.574c-0.445,0.436-1.197,0.408-1.615,0c-0.418-0.406-4.502-4.695-4.502-4.695C6.112,10.57,6,10.285,6,10s0.112-0.57,0.335-0.789c0,0,4.084-4.287,4.502-4.695C11.255,4.107,12.007,4.08,12.452,4.516z"
                   />
                 </svg>
+              </a>
               </div>
             </td>
             <td>
@@ -148,10 +150,12 @@
             </td>
             <td style="width: 15%; cursor: pointer;">
               <div id="next">
+                <a href="#stage_images.layer_image.!next">
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20 20" enable-background="new 0 0 20 20" xml:space="preserve" width="40">
                   <path fill="#455A64" d="M9.163,4.516c0.418,0.408,4.502,4.695,4.502,4.695C13.888,9.43,14,9.715,14,10s-0.112,0.57-0.335,0.787c0,0-4.084,4.289-4.502,4.695c-0.418,0.408-1.17,0.436-1.615,0c-0.446-0.434-0.481-1.041,0-1.574L11.295,10L7.548,6.092c-0.481-0.533-0.446-1.141,0-1.576C7.993,4.08,8.745,4.107,9.163,4.516z"
                   />
                 </svg>
+              </a>
               </div>
             </td>
           </tr>
@@ -206,25 +210,13 @@
     </div>
   </div>
 
-  <script src="layerjs.js"></script>
+  <script src="../../dist/layerjs.js"></script>
   <script>
     layerJS.init();
-    // API calls for slider left/right buttons
-    var ilayer = layerJS.select('#layer_image');
-    document.getElementById('next').addEventListener('click', function() {
-      ilayer.transitionTo(ilayer.currentFrame.data.attributes.neighbors.r, {
-        type: 'left'
-      });
-    });
-    document.getElementById('prev').addEventListener('click', function() {
-      ilayer.transitionTo(ilayer.currentFrame.data.attributes.neighbors.l, {
-        type: 'right'
-      });
-    });
     // API calls for menu open closely
     var mlayer = layerJS.select('#layer_menu');
     document.getElementsByClassName('menubox')[0].addEventListener('click', function() {
-      if (mlayer.currentFrame.data.attributes.name == 'menu1') {
+      if (mlayer.currentFrame.name() == 'menu1') {
         mlayer.transitionTo('menu2', {
           type: 'down'
         });
