--- a/examples/vermont_diaries/index.html
+++ b/examples/vermont_diaries/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Example layerJS application. Showcasing a presentiation/slideshow like example of a comic">
   <meta name="author" content="Thomas Handorf">
 
-  <link rel="stylesheet" href="layerjs.css">
+  <link rel="stylesheet" href="../../dist/css/layerjs.css">
   <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
   <script src="layerjs.js"></script>
   <style>
@@ -115,10 +115,11 @@
     <a id="source" href="http://www.snotm.com/">Comic by Alex Noriega</a>
 
   </div>
+    <script src="../../dist/layerjs.js"></script>
   <script>
     layerJS.init();
     $('[data-lj-type="frame"]').on('click', function(e) {
-      layerJS.select('[data-lj-type="layer"]').transitionTo(e.currentTarget._ljView.data.attributes.name);
+      layerJS.select('[data-lj-type="layer"]').transitionTo(e.currentTarget._ljView.name());
     });
   </script>
 </body>
