new Mutation Signalling

--- a/examples/nested/index.html
+++ b/examples/nested/index.html
@@ -126,9 +126,9 @@
             </td>
             <td>
               <div id="stage_images" data-lj-type="stage">
-                <div id="layer_image" data-lj-type="layer" data-lj-native-scroll="false" data-lj-default-frame="image2">
+                <div id="layer_image" data-lj-type="layer" data-lj-native-scroll="false" data-lj-default-frame="image1">
                   <div data-lj-type="frame" data-lj-name="image1" data-lj-fit-to="cover" data-lj-no-scrolling="true" data-lj-start-position="center" data-lj-neighbors.l="image6" data-lj-neighbors.r="image2">
-                    <image src="img/1.jpg" />
+                    <image src="https://upload.wikimedia.org/wikipedia/commons/3/3d/LARGE_elevation.jpg" />
                   </div>
                   <div data-lj-type="frame" data-lj-name="image2" data-lj-fit-to="cover" data-lj-no-scrolling="true" data-lj-start-position="center" data-lj-neighbors.l="image1" data-lj-neighbors.r="image3">
                     <image src="img/2.jpg" />
