layerview: allow specifying reverse transition in links etc by preceding “r:” or “reverse:” transition.type

--- a/examples/sidemenu/index.html
+++ b/examples/sidemenu/index.html
@@ -20,7 +20,7 @@
           </div>
         </div>
         <div lj-type="frame" lj-name="menu" class="nav menu" lj-fit-to="responsive-height" lj-neighbors.r="hmenu">
-          <a href="#hmenu?t=0.5s&p=slideAwayLeftFade" class="close">&#x2573;</a>
+          <a href="#hmenu?t=0.5s&p=reverse:slideOverRightFade" class="close">&#x2573;</a>
           <ul class="nav-list">
             <li class="nav-item">
               Menu 1
