package: moved distribution layerjs.css from ./dist/css/ to ./dist/; updated how examples are build (they don’t need to be build except they should be deployed on website)

--- a/examples/nested/index.html
+++ b/examples/nested/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Simple Example</title>
   <meta name=viewport content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="layerjs.css">
+  <link rel="stylesheet" type="text/css" href="../../dist/layerjs.css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
   <style>
     @import url(https://fonts.googleapis.com/css?family=Oxygen:400);
@@ -206,7 +206,7 @@
     </div>
   </div>
 
-  <script src="layerjs.js"></script>
+  <script src="../../dist/layerjs.js"></script>
   <script>
     layerJS.init();
     // API calls for slider left/right buttons
