--- a/examples/vermont_diaries/index.html
+++ b/examples/vermont_diaries/index.html
@@ -9,9 +9,9 @@
   <meta name="description" content="Example layerJS application. Showcasing a presentiation/slideshow like example of a comic">
   <meta name="author" content="Thomas Handorf">
 
-  <link rel="stylesheet" href="../../dist/css/layerjs.css">
+  <link rel="stylesheet" href="../../dist/layerjs.css">
   <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-  <script src="layerjs.js"></script>
+  <script src="../../dist/layerjs.js"></script>
   <style>
     html {
       height: 100%;
