--- a/examples/parallax/index.html
+++ b/examples/parallax/index.html
@@ -2,35 +2,35 @@
 
 <head>
   <meta name="description" content="parallax effect">
-  <script src="layerjs.js"></script>
-  <link href="layerjs.css" type="text/css" rel="stylesheet" />
+  <script src="../../dist/layerjs.js"></script>
+  <link href="../../dist/layerjs.css" type="text/css" rel="stylesheet" />
   <link href="your-style.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
-  <div lj-type="stage">
-    <div lj-type="layer">
-      <div lj-type="frame" lj-name="bg" lj-fit-to="cover" lj-no-scrolling="true">
+  <div lj-type="stage"> <!-- Add a stage. -->
+    <div lj-type="layer"> <!-- Background layer. -->
+      <div lj-type="frame" lj-name="bg" lj-fit-to="cover" lj-no-scrolling="true"> <!-- Frame containing the background image that covers the full background. Can contain arbitrary content, not just an image. -->
         <img src="img/prezi.png">
       </div>
     </div>
-    <div lj-type="layer">
-      <div lj-type="frame" lj-name="frame1">
-        <p>
+    <div lj-type="layer"> <!-- Foreground layer. -->
+      <div lj-type="frame"> <!-- Frame containing the actual content. If higher than the stage it will scroll. -->
+        <p class="p">
           Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
         </p>
         <div class="transparent">
         </div>
-        <p>
+        <p class="p">
           Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, litot Europa usa li sam vocabular. Li lingues differe solmen in li grammatica, li pronunciation e li plu commun vocabules. Omnicos directe
           al desirabilite de un nov lingua franca: On refusa continuar payar custosi traductores. At solmen va esser necessi far uniform grammatica, pronunciation e plu sommun paroles.
         </p>
         <div class="window">
         </div>
-        <p>
+        <p class="p">
           Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.&nbsp;
         </p>
-        <p>
+        <p class="p">
           Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, litot Europa usa li sam vocabular. Li lingues differe solmen in li grammatica, li pronunciation e li plu commun vocabules. Omnicos directe
           al desirabilite de un nov lingua franca: On refusa continuar payar custosi traductores. At solmen va esser necessi far uniform grammatica, pronunciation e plu sommun paroles.
         </p>
@@ -38,7 +38,7 @@
     </div>
   </div>
   <script>
-    layerJS.init();
+    layerJS.init(); // initialize layerJS framework
   </script>
 </body>
 
